# ML-DL-Ops-Prakhar-B23BB1032

./: .dockerignore  .gitignore  Assignment_01.ipynb  B23BB1032_ass_4_report.md  B23BB1032_ass_4_steps.txt  B23BB1032_ass_4_tuned_en_to_hi.ipynb  B23BB1032_ass_4_tuned_en_to_hi.py  DL-Ops Lab Assignment-1.docx  DL-Ops Lab Assignment-1.md  Dockerfile_B23BB1032  Dockerfile_eval_B23BB1032  MLOPS_assignment01_B23BB1032.ipynb  README.md  REPORT_B23BB1032.md  assignment_plan.txt  b23bb1004.ipynb  check.py  en_to_hi.ipynb  evaluate_best.py  fintech_contract.yaml  orders_contract.yaml  pdf_content.txt  pyproject.toml  q1b.py  result_q1 - results_summary.csv  rides_contract.yaml  run_tuning.py  thermostat_contract.yaml  train_final.py  up.py
Assignment5/: .gitignore  Dockerfile  README.md  download_models.py  eval.py  eval_q1.py  fix_inside_container.sh  optuna_search.py  q2_detector.py  q2_fgsm.py  q2_train_resnet.py  requirements.txt  rul_all.sh  train_lora.py  train_q1.py
Assignment_02/: fintech_contract.yaml  orders_contract.yaml  rides_contract.yaml  thermostat_contract.yaml
assignment_03/: Dockerfile_B23BB1032  Dockerfile_eval_B23BB1032  README.md  requirements_B23BB1032.txt
docs/: _config.yml  index.html
lab14-frb/: TEACH_DOCKER.md  main.py  requirements.txt
que2/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  train.py
question_1/: Dockerfile  eval.py  output.txt  requirements.txt  translate.py
question_3/: 1_count_params.py  3_onnx.py.py  4_inf.py.py  pyproject.toml  requirements.txt  train_text_to_image_lora.py
src/: data.py  train.py
(+13 files in other folders)
