[project]
name = "vishal-kis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "deepface>=0.0.99",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.8",
    "nltk>=3.9.3",
    "open-clip-torch>=3.3.0",
    "opencv-python>=4.13.0.92",
    "optuna>=4.8.0",
    "ray[tune]<2.45.0",
    "tf-keras>=2.20.1",
    "torch>=2.10.0",
]
